Thu Nov 23 15:36:28 CET 2006 Daniel Veillard <daniel@veillard.com>

	* configure.in: fix a python detection problem pointed out by 
	  Joseph Sacco, fixes bug #376391

Fri Nov 17 09:53:08 HKT 2006 William Brack <wbrack@mmm.com.hk>

	* libxslt/transform.c: fixed problem with entity handling
	  within xsltCopyAttrListNoOverwrite (#352907)
	* tests/general/bug-164.xsl, tests/general/bug-164.out,
	  tests/docs/bug-164.oxml: added a regression test for this

Thu Oct 26 15:31:01 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* NEWS configure.in doc//*: preparing release of libxslt-1.1.18,
	  this bumps libxml2 requirement to 1.6.27
	* libexslt/date.c libxslt/namespaces.h libxslt/xslt.c 
	  libxslt/xsltInternals.h: cosmetic cleanups to restore the
	  API extraction

Thu Oct 26 10:36:43 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* doc//*: removed all remaining references to the old Wiki

Thu Oct 12 23:12:24 HKT 2006 William Brack <wbrack@mmm.com.hk>

	* libexslt/date.c: fixed end-of-month problem in exsltDateCurrent
	  (#359246)

Thu Oct 12 14:39:37 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/preproc.c: applied patch from Mike Hommey fixing 2 
	  erroneous xmlFree() and adding a message on an unsupported feature

Wed Oct 11 23:16:10 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* python/libxslt-python-api.xml: applied fix for accessor functions
	  of a stylesheet returning pointers to immutable strings, patch
	  from #320540
	* xsltproc/xsltproc.c: fix the xinclude on stylehseet problem
	  by adding a new parameter to xsltproc names --xincludestyle

Wed Oct 11 22:27:37 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* xsltproc/xsltproc.c: apply patch from Gary Coady to compile when
	  libxml2 has no xinclude support #319886
	* docs/*: renamed Gnome to GNOME fixes #352159

Wed Oct 11 21:37:27 CEST 2006 Daniel Veillard <daniel@veillard.com>

	* libxslt/Makefile.am: a missing DESTDIR